# cpp_proj_template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  ReadMe.md  TODO.md  build.bat  build.sh  cpp_proj_template_cleanup_run.sh  cpp_proj_template_find_package_test.bat  cpp_proj_template_run.bat  cpp_proj_template_run.sh
.github/actions/ubuntu-build-steps/: action.yml
.github/actions/windows-build-steps/: action.yml
.github/workflows/: ci.yml  linux.yml  macos.yml  release.yml  ubuntu-build.yml  windows-build.yml  windows.yml
assets/: cpp_proj_template.desktop
benchmark/: CMakeLists.txt
cmake/: Config.cmake.in  Warnings.cmake  cppcheck.cmake  create_target_export_header.cmake  example_libraryConfig.cmake.in  preamble.cmake  project_preamble.cmake  setupExportSetInstall.cmake  setup_export_set_installation.cmake  setup_sccache.cmake  static_analysis.cmake  warnings.cmake
dependencies/: CMakeLists.txt
dependencies/fmt/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
packaging/: CMakeLists.txt
src/: CMakeLists.txt
src/example_executable_src/: CMakeLists.txt  main.cpp
src/example_library_src/: CMakeLists.txt
src/example_library_src/include/example_library/: library.hpp
src/example_library_src/source/: library.cpp
src/headeronly_supporting_lib_src/: CMakeLists.txt
src/headeronly_supporting_lib_src/include/headeronly_supporting_lib/: supporting_lib.hpp
test/: CMakeLists.txt
test/example_lib_executable/: CMakeLists.txt
test/test_example_library_install/: CMakeLists.txt
test/test_example_library_install/template_find_package_install_test/: CMakeLists.txt
test/test_install/: CMakeLists.txt
test/test_install/example_library_install_test_template/: CMakeLists.txt
test/using_google_test/: google_test_usage.cpp
